fixed double scroll bar

--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@
   font-family: "Inter", sans-serif;
 }
 
-html,
+
 body {
   overflow-x: hidden;
   overflow-y: auto;
